--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 TWITCH_OAUTH_TOKEN=oauth:
 TWITCH_CHANNELS=joshq00,sandiegostudios
 MLB_LISTINGS_URL=https://mlb24.theshow.com/apis/listings.json
+MLB_ITEMS_URL=https://mlb24.theshow.com/apis/items.json?type=mlb_card
+MLB_CAPTAINS_URL=https://mlb24.theshow.com/apis/captains.json
 
